--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -2,86 +2,99 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>To-Do List Lengkap</title>
+  <title>Kalkulator</title>
   <style>
-    body { font-family: sans-serif; background: #f4f4f4; padding: 20px; }
-    h1 { text-align: center; }
-    #todo-form { margin-bottom: 20px; display: flex; gap: 10px; justify-content: center; }
-    input[type="text"] { padding: 10px; width: 300px; }
-    button { padding: 10px; }
-    ul { list-style: none; padding: 0; }
-    li { background: #fff; margin-bottom: 10px; padding: 10px; border-left: 5px solid #2196F3; display: flex; justify-content: space-between; align-items: center; }
-    .checked { text-decoration: line-through; color: gray; }
-    .actions button { margin-left: 5px; }
+    body {
+      background: #f0f0f0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
+    }
+    .calculator {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 260px;
+    }
+    #display {
+      width: 100%;
+      height: 50px;
+      font-size: 24px;
+      margin-bottom: 10px;
+      text-align: right;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+    .buttons {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+    }
+    button {
+      padding: 15px;
+      font-size: 18px;
+      border: none;
+      background: #e0e0e0;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button.operator {
+      background: #4CAF50;
+      color: white;
+    }
+    button.equal {
+      background: #2196F3;
+      color: white;
+      grid-column: span 2;
+    }
+    button.clear {
+      background: #f44336;
+      color: white;
+      grid-column: span 2;
+    }
   </style>
 </head>
 <body>
-  <h1>To-Do List</h1>
-  <div id="todo-form">
-    <input type="text" id="taskInput" placeholder="Tambahkan tugas baru...">
-    <button onclick="addTask()">Tambah</button>
-    <button onclick="clearTasks()">Reset</button>
+  <div class="calculator">
+    <input type="text" id="display" disabled>
+    <div class="buttons">
+      <button onclick="append('7')">7</button>
+      <button onclick="append('8')">8</button>
+      <button onclick="append('9')">9</button>
+      <button class="operator" onclick="append('/')">/</button>
+      <button onclick="append('4')">4</button>
+      <button onclick="append('5')">5</button>
+      <button onclick="append('6')">6</button>
+      <button class="operator" onclick="append('*')">×</button>
+      <button onclick="append('1')">1</button>
+      <button onclick="append('2')">2</button>
+      <button onclick="append('3')">3</button>
+      <button class="operator" onclick="append('-')">-</button>
+      <button onclick="append('0')">0</button>
+      <button onclick="append('.')">.</button>
+      <button class="equal" onclick="calculate()">=</button>
+      <button class="operator" onclick="append('+')">+</button>
+      <button class="clear" onclick="clearDisplay()">C</button>
+    </div>
   </div>
-  <ul id="taskList"></ul>
 
   <script>
-    let tasks = JSON.parse(localStorage.getItem("todos")) || [];
-
-    function renderTasks() {
-      const list = document.getElementById("taskList");
-      list.innerHTML = "";
-      tasks.forEach((task, index) => {
-        const li = document.createElement("li");
-        li.className = task.done ? "checked" : "";
-
-        const span = document.createElement("span");
-        span.textContent = task.text;
-        span.onclick = () => toggleDone(index);
-
-        const actions = document.createElement("div");
-        actions.className = "actions";
-
-        const delBtn = document.createElement("button");
-        delBtn.textContent = "Hapus";
-        delBtn.onclick = () => deleteTask(index);
-
-        actions.appendChild(delBtn);
-        li.appendChild(span);
-        li.appendChild(actions);
-        list.appendChild(li);
-      });
+    function append(value) {
+      document.getElementById('display').value += value;
     }
-
-    function addTask() {
-      const input = document.getElementById("taskInput");
-      const text = input.value.trim();
-      if (text === "") return;
-      tasks.push({ text, done: false });
-      input.value = "";
-      saveTasks();
+    function clearDisplay() {
+      document.getElementById('display').value = '';
     }
-
-    function toggleDone(index) {
-      tasks[index].done = !tasks[index].done;
-      saveTasks();
+    function calculate() {
+      try {
+        document.getElementById('display').value = eval(document.getElementById('display').value);
+      } catch {
+        document.getElementById('display').value = 'Error';
+      }
     }
-
-    function deleteTask(index) {
-      tasks.splice(index, 1);
-      saveTasks();
-    }
-
-    function clearTasks() {
-      tasks = [];
-      saveTasks();
-    }
-
-    function saveTasks() {
-      localStorage.setItem("todos", JSON.stringify(tasks));
-      renderTasks();
-    }
-
-    renderTasks();
   </script>
 </body>
 </html>
