--- a/friska/biodata diri.html
+++ b/friska/biodata diri.html
@@ -1,98 +1,7 @@
 <!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <title>Progress Tracker</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f0f0f0;
-      padding: 30px;
-      text-align: center;
-    }
-    h1 {
-      margin-bottom: 20px;
-    }
-    input[type="number"] {
-      padding: 10px;
-      width: 80px;
-      font-size: 16px;
-      margin-right: 10px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    .bar-container {
-      width: 100%;
-      max-width: 600px;
-      height: 30px;
-      background: #ddd;
-      margin: 30px auto;
-      border-radius: 5px;
-      overflow: hidden;
-    }
-    .bar {
-      height: 100%;
-      background: #4CAF50;
-      width: 0;
-      text-align: right;
-      line-height: 30px;
-      color: white;
-      font-weight: bold;
-      padding-right: 10px;
-      transition: width 0.4s ease;
-    }
-    .info {
-      margin-top: 10px;
-      color: #333;
-      font-size: 14px;
-    }
-    footer {
-      margin-top: 50px;
-      font-size: 13px;
-      color: #666;
-    }
-    .bar.red { background: #f44336; }
-    .bar.yellow { background: #FF9800; }
-    .bar.green { background: #4CAF50; }
-  </style>
-</head>
+<html>
+<head><title>Link</title></head>
 <body>
-  <h1>Progress Tracker</h1>
-  <div>
-    <input type="number" id="progressInput" min="0" max="100" placeholder="0-100">
-    <button onclick="updateProgress()">Update</button>
-  </div>
-  <div class="bar-container">
-    <div class="bar" id="progressBar">0%</div>
-  </div>
-  <div class="info">Masukkan angka antara 0 sampai 100 untuk melihat progress.</div>
-
-  <footer>Progress Tracker © 2025</footer>
-
-  <script>
-    function updateProgress() {
-      const input = document.getElementById("progressInput");
-      let value = parseInt(input.value);
-      if (isNaN(value)) value = 0;
-      if (value < 0) value = 0;
-      if (value > 100) value = 100;
-
-      const bar = document.getElementById("progressBar");
-      bar.style.width = value + "%";
-      bar.textContent = value + "%";
-
-      bar.classList.remove("red", "yellow", "green");
-      if (value < 40) {
-        bar.classList.add("red");
-      } else if (value < 70) {
-        bar.classList.add("yellow");
-      } else {
-        bar.classList.add("green");
-      }
-    }
-  </script>
+  <a href="https://www.google.com" target="_blank">Kunjungi Google</a>
 </body>
 </html>
