--- a/Nurul/profile.html
+++ b/Nurul/profile.html
@@ -4,29 +4,67 @@
     <meta charset="UTF-8">
     <title>Profil Pengguna</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 30px; }
+        body { 
+            font-family: Arial, sans-serif; 
+            margin: 30px; 
+            background-color: #f0f2f5;
+        }
         .profile-card {
             border: 1px solid #ccc;
             border-radius: 8px;
             padding: 24px;
             max-width: 400px;
-            background: #f9f9f9;
+            background: #fff;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         }
         .profile-card h2 { margin-top: 0; }
         .profile-card ul { padding-left: 20px; }
+        .avatar {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+            display: block;
+            margin: 0 auto 20px auto;
+        }
+        .bio {
+            font-size: 0.9rem;
+            color: #555;
+            margin-bottom: 15px;
+            text-align: center;
+        }
+        .logout-btn {
+            display: block;
+            background-color: #3498db;
+            color: #fff;
+            padding: 10px 16px;
+            border: none;
+            border-radius: 5px;
+            text-align: center;
+            text-decoration: none;
+            margin: 20px auto 0;
+            width: 100%;
+            cursor: pointer;
+        }
+        .logout-btn:hover {
+            background-color: #2980b9;
+        }
     </style>
 </head>
 <body>
     <div class="profile-card">
+        <img src="https://i.ibb.co/8bVx7Rw/default-avatar.png" alt="Avatar" class="avatar">
         <h2>Profil Pengguna</h2>
         <p><strong>Nama:</strong> Andi Saputra</p>
         <p><strong>Email:</strong> andi.saputra@mail.com</p>
+        <p class="bio">Seorang developer yang senang mengeksplor teknologi web dan gemar menulis blog tentang pemrograman.</p>
         <p><strong>Hobi:</strong></p>
         <ul>
             <li>Menulis kode</li>
             <li>Membaca buku</li>
             <li>Bersepeda</li>
         </ul>
+        <a href="/logout" class="logout-btn">Logout</a>
     </div>
 </body>
 </html>
