--- a/Nurul/login.html
+++ b/Nurul/login.html
@@ -1,97 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login page</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            background-color: #f8f9fa; /* Light gray (60%) */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login page</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background-color: #f8f9fa;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
 
-        .login-container {
-            background-color: #fff; /* White (30%) */
-            padding: 30px;
-            border-radius: 5px;
-            width: 350px; /* Set a fixed width for the container */
-        }
+    .login-container {
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 5px;
+      width: 350px;
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    }
 
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-            color: #3498db; /* Dark blue (10%) - Accent color */
-        }
+    .avatar {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      object-fit: cover;
+      display: block;
+      margin: 0 auto 20px auto;
+    }
 
-        form {
-            display: flex;
-            flex-direction: column;
-        }
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #3498db;
+    }
 
-        label {
-            margin-bottom: 5px;
-            font-weight: bold;
-            color: #333; /* Dark gray */
-        }
+    form {
+      display: flex;
+      flex-direction: column;
+    }
 
-        input[type="text"],
-        input[type="password"] {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-            margin-bottom: 15px;
-        }
+    label {
+      margin-bottom: 5px;
+      font-weight: bold;
+      color: #333;
+    }
 
-        button[type="submit"] {
-            background-color: #3498db; /* Dark blue (10%) - Accent color */
-            color: white;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: all 0.2s ease-in-out;
-        }
+    input[type="text"],
+    input[type="password"] {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+      margin-bottom: 15px;
+    }
 
-        button[type="submit"]:hover {
-            background-color: #2980b9; /* Darken blue on hover */
-        }
+    button[type="submit"] {
+      background-color: #3498db;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+    }
 
-        .signup-link {
-            text-align: center;
-            margin-top: 10px;
-            font-size: smaller;
-        }
+    button[type="submit"]:hover {
+      background-color: #2980b9;
+    }
 
-        .signup-link a { /* Style the link text within .signup-link */
-            color: #3498db; /* Dark blue (10%) - Accent color */
-            font-weight: bold; /* Make the text bold */
-            text-decoration: none; /* Remove underline */
-        }
+    .signup-link, .forgot-password {
+      text-align: center;
+      margin-top: 10px;
+      font-size: smaller;
+    }
 
-        .signup-link a:hover { /* Add hover effect for the link text */
-            text-decoration: underline; /* Underline on hover */
-        }
-    </style>
+    .signup-link a, .forgot-password a {
+      color: #3498db;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    .signup-link a:hover, .forgot-password a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.75rem;
+      color: #aaa;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-    <div class="login-container">
-        <h1>Login</h1>
-        <form action="/login" method="post">
-            <label for="email">Email: </label>
-            <input type="text" required autofocus name="email" id="email"><br><br>
+  <div class="login-container">
+    <img src="https://i.ibb.co/8bVx7Rw/default-avatar.png" alt="Avatar" class="avatar">
+    <h1>Login</h1>
+    <form action="/login" method="post">
+      <label for="email">Email: </label>
+      <input type="text" required autofocus name="email" id="email" placeholder="Enter your email">
 
-            <label for="password">Password: </label>
-            <input type="password" required autofocus name="password" id="password"><br><br>
-            <br>
-            <button type="submit">Login</button>
-        </form>
-        <div class="signup-link">
-            Don't have an account? <a href="/static/signup.html">Sign Up Here</a>
-        </div>
+      <label for="password">Password: </label>
+      <input type="password" required name="password" id="password" placeholder="Enter your password">
+
+      <button type="submit">Login</button>
+    </form>
+
+    <div class="forgot-password">
+      <a href="#">Forgot your password?</a>
     </div>
+
+    <div class="signup-link">
+      Don't have an account? <a href="/static/signup.html">Sign Up Here</a>
+    </div>
+  </div>
+
+  <footer>&copy; 2025 Task App. All rights reserved.</footer>
 </body>
 </html>
